<resources>
    <string name="app_name">PM2E17167</string>
    <string name="salvar">Salvar contacto</string>
    <string name="salvados">Contactos Salvados</string>
    <string name="atras">Atras</string>
    <string name="compartir">Compartir contacto</string>
    <string name="verimagen">Ver imágen</string>
    <string name="eliminar">Eliminar contacto</string>
    <string name="actualizar">Actualizar contacto</string>
    <string name="agregarfoto">Agregar foto</string>
    <string name="actualiza">Actulización de datos</string>
    <string name="agregar">Agregar</string>
</resources>