<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityList">

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/atras"
        app:layout_constraintBottom_toTopOf="@+id/busqueda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/busqueda"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/listcontactos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.424" />

    <ListView
        android:id="@+id/listcontactos"
        android:layout_width="409dp"
        android:layout_height="453dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busqueda" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/compartir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listcontactos" />

    <Button
        android:id="@+id/btnImagen"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/verimagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listcontactos" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/eliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="174dp"
        android:layout_height="43dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/actualizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>